--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css">
     <title>Game Project</title>
 </head>
 <body>
-   <section class="Global__block">   <!--width: 100% -->
         <header class="header">
             <div class="container1">
                 <div class="header__first--logo--page">
@@ -46,8 +45,6 @@
                 </div>          
             </div>
         </header>
-    </section>
-    <section class="about">
         <div class="container about_container">
             <div class="about__inner">
                 <div class="about__text--sublime">
@@ -110,9 +107,7 @@
                 </div>
             </div>
         </div>
-    </section>
     <!-- NEXT FEATURED -->
-    <section class="Featured-Projects__container">
         <div class="container">
             <div class="featured__inner">
                 <div class="heading__inner">
@@ -167,8 +162,6 @@
                     </div>
             </div>
         </div>
-    </section>
-    <section class="strategic__main">
         <div class="container">
             <div class="strategic__main--up--container">
             <div class="strategic__heading">
@@ -236,9 +229,7 @@
                 </div>
             </div>
         </div>
-    </section>
     <!-- services -->
-    <section class="services__main">
         <div class="container">
             <div class="services__container">
                 <div class="services__box--heading">
@@ -275,9 +266,7 @@
                 </div>
             </div>
         </div>
-    </section>
     <!-- ourTeam -->
-    <section class="ourTeam__main">
         <div class="container">
             <div class="ourTeam__block">
                 <div class="ourTeam__heading">
@@ -322,10 +311,8 @@
                 </div>
             </div>
         </div>
-    </section>
     <!-- /ourTeam -->
 
-    <section class="Testimonials">
         <div class="container2">
             <div class="Testimonials__heading">
                 <h2 class="Testimonials__heading__text--first">estimonials</h2>
@@ -344,8 +331,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="blogs__main">
         <div class="container">
             <div class="blogs__block">
                 <div class="blogs__latest--Block">
@@ -404,8 +389,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="contact__main">
         <div class="container">
             <div class="contact__block">
                 <div class="contact__map">
@@ -454,15 +437,11 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="emptiness1__main">
         <div class="container">
             <div class="emptiness1">
 
             </div>
         </div>
-    </section>
-    <section class="weCreate__main">
         <div class="container2">
             <div class="weCreate__block">
                 <div class="weCreate__menu">
@@ -494,13 +473,10 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="emptiness2__main">
         <div class="container">
             <div class="emptiness2">
 
             </div>
         </div>
-    </section>
 </body>
 </html>
