--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
                         </div>
                         <div class="contact__form__footer">
                             <div class="contact__form__footer--blocks">
-                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/contact/Layer 49.png" alt=""></div>
-                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/contact/Layer 50.png" alt=""></div>
-                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/contact/Layer 51.png" alt=""></div>
+                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/menu/image (2).png" alt=""></div>
+                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/menu/image (3).png" alt=""></div>
+                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/menu/image (1).png" alt=""></div>
                             </div>
                         </div>
                     </div>
