--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Game Project</title>
 </head>
 <body>
-        <header class="header">
+        <header class="header" id="HOME">
             <div class="container1">
                 <div class="header__first--logo--page">
                         <h1 class="header__text">ublime</h1>
@@ -29,16 +29,16 @@
                         <div class="header__menu--nav">
                             <ul class="menu__nav--list">
                                 <li class="menu__nav--listing">
-                                    <a class="nav__link" href="#">About</a>
+                                    <a class="nav__link" href="#ABOUT SUBLIME">About</a>
                                 </li>
                                 <li class="menu__nav--listing ">
-                                    <a class="nav__link nav__link--active" href="#">Development</a>
+                                    <a class="nav__link nav__link--active" href="#CLIENTS">Development</a>
                                 </li>
                                 <li class="menu__nav--listing">
-                                    <a class="nav__link" href="#">Projects</a>
+                                    <a class="nav__link" href="#OUR WORKS">Projects</a>
                                 </li>
                                 <li class="menu__nav--listing">
-                                    <a class="nav__link" href="#">Blog</a>
+                                    <a class="nav__link" href="#BLOG">Blog</a>
                                 </li>
                             </ul>
                         </div>
@@ -46,7 +46,7 @@
             </div>
         </header>
         <div class="container about_container">
-            <div class="about__inner">
+            <div class="about__inner" id="ABOUT SUBLIME">
                 <div class="about__text--sublime">
                     <h2 class="text__sublime--first">bout </h2>
                     <h2 class="text__sublime--second">ublime</h2>
@@ -109,7 +109,7 @@
         </div>
     <!-- NEXT FEATURED -->
         <div class="container">
-            <div class="featured__inner">
+            <div class="featured__inner" id="OUR WORKS">
                 <div class="heading__inner">
                     <h2 class="heading__text__first">eatured</h2> 
                     <h2 class="heading__text__second">rojects</h2>
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="strategic__main--up--container">
+            <div class="strategic__main--up--container" id="CLIENTS">
             <div class="strategic__heading">
                 <h2 class="strategic__first-heading">trategic</h2>
                 <h2 class="strategic__second-heading">rocess</h2>
@@ -231,7 +231,7 @@
         </div>
     <!-- services -->
         <div class="container">
-            <div class="services__container">
+            <div class="services__container" id="SERVICES">
                 <div class="services__box--heading">
                     <h2 class="services__box--heading--first">ervices</h2>
                     <h2 class="services__box--heading--second">rovided</h2>
@@ -268,7 +268,7 @@
         </div>
     <!-- ourTeam -->
         <div class="container">
-            <div class="ourTeam__block">
+            <div class="ourTeam__block" id="TEAM">
                 <div class="ourTeam__heading">
                     <h2 class="ourTeam__heading--text--first">ur</h2>
                     <h2 class="ourTeam__heading--text--second">eam</h2>
@@ -314,7 +314,7 @@
     <!-- /ourTeam -->
 
         <div class="container2">
-            <div class="Testimonials__heading">
+            <div class="Testimonials__heading" id="TESTIMONIALS">
                 <h2 class="Testimonials__heading__text--first">estimonials</h2>
             </div>
             <div class="Testimonials__discription">
@@ -332,7 +332,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="blogs__block">
+            <div class="blogs__block" id="BLOG">
                 <div class="blogs__latest--Block">
                     <div class="blogs__latest__heading">
                         <h2 class="blogs__latest__heading--text">logs</h2>
@@ -390,7 +390,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="contact__block">
+            <div class="contact__block" id="CONTACT US">
                 <div class="contact__map">
                     <div class="contact__map--img"> 
                         <div class="contact__map--icon">ublime</div>
@@ -405,14 +405,14 @@
                         <form class="form__main--form--form" action="#">
 
                             <fieldset class="form__main--fieldset--1">
-                                <input class="form__main--input--1" type="text" placeholder="Your Name">
+                                <input class="form__main--input--1" id="name" type="text" placeholder="Your Name">
                             </fieldset>
 
-                            <input class="form__main--input--2" type="text" placeholder="Mobile">
-                            <input class="form__main--input--3" type="email" placeholder="Email">
+                            <input class="form__main--input--2" id="phone" type="text" placeholder="Mobile">
+                            <input class="form__main--input--3" id="email" type="email" placeholder="Email">
                             
                             <fieldset class="form__main--fieldset--2">
-                                <input class="form__main--input--4" type="text" placeholder="Your Message">
+                                <input class="form__main--input--4" id="messege" type="text" placeholder="Your Message">
                             </fieldset>
 
                             <input class="form__main--input--5" type="submit" value="SEND">
@@ -427,9 +427,9 @@
                         </div>
                         <div class="contact__form__footer">
                             <div class="contact__form__footer--blocks">
-                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/menu/image (2).png" alt=""></div>
-                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/menu/image (3).png" alt=""></div>
-                                <div class="contact__form__footer--icon"><img class="contact__form__footer--img" src="img/menu/image (1).png" alt=""></div>
+                                <div class="contact__form__footer--icon"><a href="https://twitter.com/" target="_blank"><img class="contact__form__footer--img" src="img/menu/image (2).png" alt=""></a></div>
+                                <div class="contact__form__footer--icon"><a href="https://instagramishe.ru/ " target="_blank"><img class="contact__form__footer--img" src="img/menu/image (3).png" alt=""></a></div>
+                                <div class="contact__form__footer--icon"><a href="https://www.facebook.com/" target="_blank"><img class="contact__form__footer--img" src="img/menu/image (1).png" alt=""></a></div>
                             </div>
                         </div>
                     </div>
@@ -450,21 +450,21 @@
                     </div>
                     <div class="menu__blocklist">
                         <ul class="menu__list--ul">
-                            <li class="menu__list--first"><a class="menu__link menu__link--active" href="#"> HOME</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#">ABOUT SUBLIME</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#"> OUR WORKS</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#"> SERVICES</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#"> TEAM</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#"> TESTIMONIALS</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#"> BLOG</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#"> CLIENTS</a></li>
-                            <li class="menu__list--first"><a class="menu__link" href="#"> CONTACT US</a></li>
+                            <li class="menu__list--first"><a class="menu__link menu__link--active" href="#HOME"> HOME</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#ABOUT SUBLIME">ABOUT SUBLIME</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#OUR WORKS"> OUR WORKS</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#SERVICES"> SERVICES</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#TEAM"> TEAM</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#TESTIMONIALS"> TESTIMONIALS</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#BLOG"> BLOG</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#CLIENTS"> CLIENTS</a></li>
+                            <li class="menu__list--first"><a class="menu__link" href="#CONTACT US"> CONTACT US</a></li>
                         </ul>
                     </div>
                     <div class="menu__discription--link">
-                        <a class="menu__discription--link-a" href="#"><img class="menu__discription--img" src="img/menu/image (2).png" width="25px" alt=""></a>
-                        <a class="menu__discription--link-a" href="#"><img class="menu__discription--img" src="img/menu/image (3).png" width="25px" alt=""></a>
-                        <a class="menu__discription--link-a" href="#"><img class="menu__discription--img" src="img/menu/image (1).png" width="25px" alt=""></a>
+                        <a class="menu__discription--link-a" href="https://twitter.com/" target="_blank"><img class="menu__discription--img" src="img/menu/image (2).png" width="25px" alt=""></a>
+                        <a class="menu__discription--link-a" href="https://instagramishe.ru/ " target="_blank"><img class="menu__discription--img" src="img/menu/image (3).png" width="25px" alt=""></a>
+                        <a class="menu__discription--link-a" href="https://www.facebook.com/" target="_blank"><img class="menu__discription--img" src="img/menu/image (1).png" width="25px" alt=""></a>
                     </div>
                 </div>
                 <div class="weCreate__landing">
